# AG-UI

./: .gitignore  README.es.md  README.md  docker-compose.yml
.agents/skills/ag_ui_adk_backend/: SKILL.md
.agents/skills/ag_ui_frontend/: SKILL.md
.agents/skills/ag_ui_langgraph_backend/: SKILL.md
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  server.py
backend/agents/: research_agent.py  travel_agent.py
docs/: adk_agui_guide.md  ag_ui_postmortem.md  langgraph_agui_guide.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/app/api/copilotkit/[integrationId]/: route.ts
frontend/src/app/api/copilotkit/[integrationId]/[[...path]]/: route.ts
